# sve-backend

./: .classpath  .env.example  .factorypath  .gitignore  .project  AGENTS.md  CHANGELOG.md  Cargo.toml  Cross.toml  Dockerfile  README.md  build.gradle  build_lambda.sh  cliff.toml  dependency-reduced-pom.xml  deploy.sh  package-lock.json  package.json  pom.xml  release.sh  release.toml  settings.gradle  sqlx-data.json
.github/workflows/: build.yml
.sqlx/: query-00eac7664acc829f5d469f2b5e1b4f7aaf806bfcb70bfa4ed7cd3a9f4eb7c177.json  query-03224e7512de0aa17f3f4a2da4e6c31154613520cb39a36ed2d53d20d5d351dd.json  query-0513441239f6e8b4ee34f735ae657efc0a9b1f7438cd651f844bfd6e26a4b327.json  query-064db7e367884e919967ca3c1604f495becc8f0f8ba27d10cb340e71d6e3ccb2.json  query-077ec5cfb7d2093ef7d2fcdaf4f0553454289c050cf8de6d0805e0d342b86c9c.json  query-08bdba04d89a88a8d1fea196318a18ea93f7905d2977860462569a14ec6b340b.json  query-08ca22a4ee9709037c27c33e04fb24467fae00a61b48dca3d18f09ed01f040e9.json  query-0e119149bca573c5248421de61dfa64479b0bd5b5e2a450a0faad8aad6ef34bb.json  query-149789d387cd2190e28785d9ad4557e62e5e70b82968fffc9a58193a9d479cc3.json  query-19bd943180899dc6f06d9c1378a82086f78f972ef53f10b2a22d3039a44c0ab3.json  query-1de546ac5e32ce693584e4246fce7a448f7c3d236bdcb50259a7b178a361ce08.json  query-1e71981121c3d553d53478f7a12d39f98065eeb64df506e035e8d572230c5843.json  query-1f9db572f5d179435626cd771413724a401139e7de6493ffc5c7f2dae0b6f95c.json  query-21495e06ac61e1d2e4d378f83b66b86616e06312772f89ac764d2aec9404529c.json  query-22064445c971a800ff7ea2f821ec20d91e055a5e61e6e1f4822bade3e4aa10e7.json  query-27148a2b946ca947b093f1e8420f47ca49df1071cc42bdfc972fae252ed5fd7d.json  query-27e5d91ad2712c5b342fd0e13b7f95b2f1182de6c4137bf149cbf4f023197ae7.json  query-299b01b855ffde9f21258e7cbbe4193d33f46549bbaaff876a3fac3d6704c093.json  query-2edfbec4da90b5d3b5bc66eb7713e2df07d58624f8bd2d7dbd820bd5f82ccea8.json  query-305c2392d5448c7fe254c0a5ebf5f3f74665a2f68b7eecddb2026c3e70e45a79.json  query-311d58e543776a5953b42cbbe4e1492dc193ebe80f7cb70ff9f9d79468e06fca.json  query-3393ef408cc9a46f5a6912aca406b6a42853ac80e3abec33da8257f4dbedc3a5.json  query-3d076d722b747977196c6cf0b3d4dad81ecc74d951b32cb7b3f1832af3649064.json  query-3df75e01bcef6b3990b9cf8f2d40cb9bb7ae243577c0affae77e5094f26eed39.json  query-412997619c0b5d005a780db50252aded1bf21cae350f5247d18476f1c459fd2f.json  query-4145152b9af87f7c4f955c81b260f972f3039189a2cd1042623f0c95d97f94b1.json  query-46b6b5eb0969a6c3020f52cd5be128ea49595d89616d85ea4babc8acadab06ef.json  query-48ab84661b647a9202e72cd7f6a659dd99762c565615465bebd5aaa5ffaf7a4e.json  query-494d75d0ac01e7313d3a7358a75502e7b836b3675f50aaa441ae450c155da937.json  query-4de0b9e51e426cb953d7f78f1760254d1acc8e708ad2cb95e8dac2f7b726aa5a.json  query-4eac55e5eedee04cbc34083773c312be13577fafaf0153c08a9cd4c5f2e62a44.json  query-5069124b3b05ce2983ff2ae5f76f30b0a233d7d132888f34e302fc3edb64de93.json  query-510b967070cbe4ab7631a9042e0f8d5d09e6a36c8df7e93c22e4d39bf621f083.json  query-57853f6f5617558f7617b8de821de8a9cc5fe8807b328eab5859c18487db8940.json  query-58dd2ad001fd9576f2ccb27a65172d2fa7039606fab0ab4f0e34eed5c00c59ff.json  query-5c98ae88278f45ff2a4d07041d04315f3c3223b667c55d6dc8e26f4e86a86452.json  query-5da522e33201d8983dd8326eb2ed152e9d0e8df0125731276c1d576a9cb8f7a1.json  query-5e61c5c21695e4d8edea872426794321fd9989927f9e120fba8e0cbf73ae4b98.json  query-6192964d2b794692a54c7ae8db4486ca8a9b8431a7232225fc2dd8af52eda4af.json  query-633c0a34f9cbf09bb22406d4031275ca6da0798fc521e417abeb6410a978a700.json  (+47 more)
0e/9c281ef025/: metadata.json
39/69fed28bbf/: metadata.json
3f/dc6c4fda91/: metadata.json
4e/2aef96888c/: metadata.json
5c/0c22e09b68/: metadata.json
c3/0558f86ccc/: metadata.json
data/: project.id
migrations/: 20220511172030_events.down.sql  20220511172030_events.up.sql  20220511190057_news.down.sql  20220511190057_news.up.sql  20220807091826_correct_events_view.down.sql  20220807091826_correct_events_view.up.sql  20220816145707_add_event_view.down.sql  20220816145707_add_event_view.up.sql  20220820082650_harden_event_bookings.down.sql  20220820082650_harden_event_bookings.up.sql  20221024142643_add_event_lifecycle_status.down.sql  20221024142643_add_event_lifecycle_status.up.sql  20221112072132_add_event_reminder_column.down.sql  20221112072132_add_event_reminder_column.up.sql  20221113082219_add_event_payment_account.down.sql  20221113082219_add_event_payment_account.up.sql  20221113091833_add_event_booking_payment_reminder.down.sql  20221113091833_add_event_booking_payment_reminder.up.sql  20221116163756_drop_event_waiting_template_column.down.sql  20221116163756_drop_event_waiting_template_column.up.sql  20221116185310_make_event_payment_account_nullable.down.sql  20221116185310_make_event_payment_account_nullable.up.sql  20221130154518_rename_event_cost_to_price.down.sql  20221130154518_rename_event_cost_to_price.up.sql  20221130160921_add_event_cost.down.sql  20221130160921_add_event_cost.up.sql  20230422123552_add_event_lifecycle_status.up.sql  20250118190525_add_event_custom_fields.down.sql  20250118190525_add_event_custom_fields.up.sql  20260502000000_sepa_support.down.sql  20260502000000_sepa_support.up.sql  20260711120000_add_event_custom_field_price_relevant.down.sql  20260711120000_add_event_custom_field_price_relevant.up.sql
src/: api.rs  calendar.rs  db.rs  email.rs  error.rs  main.rs  models.rs  sheets.rs  store.rs  test_utils.rs
src/api/: events.rs  mod.rs
src/db/: bookings.rs  events.rs  mod.rs  news.rs
src/logic/: banking.rs  calendar.rs  contact.rs  csv.rs  events.rs  export.rs  membership.rs  mod.rs  news.rs  secrets.rs  tasks.rs  (+1 more)
templates/: cancel_booking_events.txt  cancel_booking_fitness.txt  event_reminder_events.txt  event_reminder_fitness.txt  membership_application.txt  participation_confirmation_fitness.txt  payment_reminder_events.txt  payment_reminder_fitness.txt  schedule_change_events.txt  schedule_change_fitness.txt  waiting_list_events.txt  waiting_list_fitness.txt
tools/: gridsome.config.js  gridsome.server.js  package-lock.json  package.json
(+123 files in other folders)
