[package]
name = "sve_backend"
version = "2.3.2"
edition = "2021"
description = "Backend for the SVE website"
authors = ["Michael Seele <mseele@gmail.com>"]
license = "MIT"
repository = "https://github.com/mseele/sve-backend"
homepage = "https://github.com/mseele/sve-backend"
readme = "README.md"
publish = false

[dependencies]
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", default-features = false, features = [
  "fmt",
  "json",
  "env-filter",
] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
axum =  "0.8.1"
http-body-util = "0.1.2"
hyper = "1.5.2"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace", "cors"] }
anyhow = { version = "1.0.95", features = ["backtrace"] }
mime = "0.3.17"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
base64 = "0.22.1"
base64-serde = "0.8.0"
chrono = { version = "0.4.39", default-features = false, features = [
  "clock",
  "std",
  "serde",
  "unstable-locales",
] }
chrono-tz = "0.10.0"
google-calendar3 = "6.0.0+20240523"
reqwest = { version = "0.12.12", default-features = false, features = ["http2", "rustls-tls"]}
lettre = { version = "0.11.11", default-features = false, features = [
  "smtp-transport",
  "pool",
  "hostname",
  "builder",
  "tokio1-rustls-tls",
  "tracing",
] }
regex = "1.11.0"
lazy_static = "1.5.0"
csv = "1.3.1"
encoding = "0.2.33"
bigdecimal = { version = "0.4.7", features = ["serde"] }
sqlx = { version = "0.8.3", features = [
  "postgres",
  "runtime-tokio-rustls",
  "chrono",
  "bigdecimal",
] }
itertools = "0.14.0"
harsh = "0.2.2"
handlebars = "6.3.0"
simple_excel_writer = { version = "0.2.0", features = ["chrono"] }
printpdf = { version = "0.7.0", features = ["svg", "embedded_images"] }
image = "0.24.9"
cfg = "0.9.0"
lambda_http = { version = "0.14.0", default-features = false, features = [
  "apigw_http",
] }
tower-service = "0.3.3"
urlencoding = "2.1.3"
iban_validate = "5.0.1"
fints-institute-db = "1.4.0"

[dev-dependencies]
pretty_assertions = "1.4.1"

[profile.release]
# 2/true is too much, 0 is not enough, 1 is just right for backtraces
debug = 1
