[package]
name = "sve_backend"
version = "2.5.1"
edition = "2024"
description = "Backend for the SVE website"
authors = ["Michael Seele <mseele@gmail.com>"]
license = "MIT"
repository = "https://github.com/mseele/sve-backend"
homepage = "https://github.com/mseele/sve-backend"
readme = "README.md"
publish = false

[dependencies]
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", default-features = false, features = [
  "fmt",
  "json",
  "env-filter",
] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
mini-moka = "0.10.3"
axum =  "0.8.6"
http-body-util = "0.1.3"
hyper = "1.7.0"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace", "cors"] }
anyhow = { version = "1.0.100", features = ["backtrace"] }
mime = "0.3.17"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
base64 = "0.22.1"
base64-serde = "0.8.0"
chrono = { version = "0.4.42", default-features = false, features = [
  "clock",
  "std",
  "serde",
  "unstable-locales",
] }
chrono-tz = "0.10.4"
google-calendar3 = "6.0.0+20240523"
reqwest = { version = "0.12.23", default-features = false, features = ["http2", "rustls-tls"]}
lettre = { version = "0.11.18", default-features = false, features = [
  "smtp-transport",
  "pool",
  "hostname",
  "builder",
  "tokio1-rustls-tls",
  "tracing",
] }
regex = "1.11.3"
lazy_static = "1.5.0"
csv = "1.3.1"
encoding = "0.2.33"
bigdecimal = { version = "0.4.8", features = ["serde"] }
sqlx = { version = "0.8.6", features = [
  "postgres",
  "runtime-tokio-rustls",
  "chrono",
  "bigdecimal",
] }
itertools = "0.14.0"
harsh = "0.2.2"
handlebars = "6.3.2"
simple_excel_writer = { version = "0.2.0", features = ["chrono"] }
printpdf = { version = "0.7.0", features = ["svg", "embedded_images"] }
image = "0.24.9"
cfg = "0.10.0"
lambda_http = { version = "0.17.0", default-features = false, features = [
  "apigw_http",
] }
tower-service = "0.3.3"
urlencoding = "2.1.3"
iban_validate = "5.0.1"
fints-institute-db = "1.4.0"
dotenvy = "0.15.7"
aws-config = "1.8.8"
aws-sdk-secretsmanager = "1.90.0"
once_cell = "1.21.3"
rustls = "0.23.34"

[dev-dependencies]
pretty_assertions = "1.4.1"

[profile.release]
lto = "fat"               # Enable Link Time Optimization with maximum optimization
codegen-units = 1         # Reduce parallel code generation units to increase optimization
opt-level = 3             # Maximum optimization for speed
panic = "abort"           # Remove panic unwinding to reduce size
debug = 1                 # Include line numbers and function names for backtraces
strip = false             # Keep debug symbols for better error reporting
incremental = false       # Disable incremental compilation in release
debug-assertions = false  # Disable debug assertions for performance
