[package]
name = "sve_backend"
version = "2.12.2"
edition = "2024"
description = "Backend for the SVE website"
authors = ["Michael Seele <mseele@gmail.com>"]
license = "MIT"
repository = "https://github.com/mseele/sve-backend"
homepage = "https://github.com/mseele/sve-backend"
readme = "README.md"
publish = false

[dependencies]
tracing = "0.1.44"
async-trait = "0.1.89"
tracing-subscriber = { version = "0.3.23", default-features = false, features = [
  "fmt",
  "json",
  "env-filter",
] }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
mini-moka = "0.10.3"
axum =  "0.8.9"
http-body-util = "0.1.4"
hyper = "1.10.1"
tower = "0.5.3"
tower-http = { version = "0.7.0", features = ["trace", "cors"] }
anyhow = { version = "1.0.103", features = ["backtrace"] }
mime = "0.3.17"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
base64 = "0.22.1"
base64-serde = "0.8.0"
chrono = { version = "0.4.45", default-features = false, features = [
  "clock",
  "std",
  "serde",
  "unstable-locales",
] }
chrono-tz = "0.10.4"
google-calendar3 = { version = "7.0.0", features = ["yup-oauth2-service-account"] }
reqwest = { version = "0.13.4", default-features = false, features = ["http2", "rustls", "json"]}
lettre = { version = "0.11.22", default-features = false, features = [
  "smtp-transport",
  "pool",
  "hostname",
  "builder",
  "tokio1-rustls-tls",
  "tracing",
] }
regex = "1.13.0"
lazy_static = "1.5.0"
csv = "1.4.0"
encoding = "0.2.33"
bigdecimal = { version = "0.4.10", features = ["serde"] }
sqlx = { version = "0.9.0", features = [
  "postgres",
  "runtime-tokio",
  "tls-rustls",
  "chrono",
  "bigdecimal",
] }
itertools = "0.15.0"
harsh = "0.2.2"
handlebars = "6.4.3"
simple_excel_writer = { version = "0.2.0", features = ["chrono"] }
printpdf = { version = "0.11.1", features = ["svg", "jpeg"] }
image = "0.25.10"
cfg = "0.10.1"
lambda_http = { version = "1.3.0", default-features = false, features = [
  "apigw_http",
] }
tower-service = "0.3.3"
urlencoding = "2.1.3"
iban_validate = "5.0.1"
fints-institute-db = "1.5.0"
num-traits = "0.2.19"
quick-xml = "0.41.0"
uuid = { version = "1.23.5", features = ["v4"] }
dotenvy = "0.15.7"
aws-config = "1.9.0"
aws-sdk-secretsmanager = "1.109.0"
once_cell = "1.21.4"
rustls = "0.23.42"
hcaptcha = { version = "3.2.4", default-features = false, features = ["rustls-backend"] }
jsonwebtoken = { version = "10.4.0", features = ["aws_lc_rs"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
mockall = "0.15.0"
uppsala = "0.9.0"
zip = "8.6.0"

[profile.release]
lto = "fat"               # Enable Link Time Optimization with maximum optimization
codegen-units = 1         # Reduce parallel code generation units to increase optimization
opt-level = 3             # Maximum optimization for speed
panic = "abort"           # Remove panic unwinding to reduce size
debug = 1                 # Include line numbers and function names for backtraces
strip = false             # Keep debug symbols for better error reporting
incremental = false       # Disable incremental compilation in release
debug-assertions = false  # Disable debug assertions for performance
